Pseudo Final work

--- a/Kherbiche_Naimi_TP01.tex
+++ b/Kherbiche_Naimi_TP01.tex
@@ -70,7 +70,7 @@
 %%%%%%% 
 \renewcommand{\appendixpagename}{Annexes}
 \renewcommand{\appendixtocname}{Annexes}
-\title{Theme: Compte Rendu Représentation et Analyse des Systèmes Non Linéaires}
+\title{Theme: Compte Rendu Commande des Systèmes Linéaires à Temps Discret}
 \author{NAIMI \bsc{Nabil} \\ KHERBICHE \bsc{Ali}}
 \date{2018-2019}
 %new
@@ -88,10 +88,10 @@
     % only works if a paragraph has started.
     \includegraphics[scale=0.5]{Logo_UT3.jpg}~\\[1cm]
     \textsc{\LARGE M1 ISTR-RODECO  }\\[1cm]
-    \textsc{\Large Compte Rendu Représentation et Analyse des Systèmes Non Linéaires}\\[1cm]
+    \textsc{\Large Compte Rendu Commande des Systèmes Linéaires à Temps Discret}\\[1cm]
     % Title
     \HRule \\[0.4cm] % saut de ligne
-    { \huge  \textsc {Analyse de stabilité d'un système à bac d'eau \\[0.4cm] }}
+    { \huge  \textsc {Synthèse d'une commande numérique pour un asservissement en vitesse \\[0.4cm] }}
 
     \HRule \\[1cm]   % sous de ligne 
     \includegraphics[scale=0.1]{logomaster.jpg}
@@ -107,7 +107,7 @@
     \begin{minipage}{0.4\textwidth}
       \begin{flushright} \large
         %%\emph{Tuteur et}
-        \emph{Tuteur:} \textsc{M Frédéric GOUAISBAUT}
+        \emph{Tuteurs:\\} \textsc{M Frédéric GOUAISBAUT\\M Soheib FERGANI}
       \end{flushright}
     \end{minipage}
     \vfill
@@ -131,7 +131,7 @@
 \input{chap2.tex}
 \input{chap3.tex}
 %\input{conclusion.tex}
-%\input{annexes.tex}
+\input{annexes.tex}
 %*********************** Bibliographie ************ 
 \bibliographystyle{alpha}
 \bibliography{biblio}  
